--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+
+    <!-- Google Ads -->
+    <meta name="google-adsense-account" content="ca-pub-3921312016426757">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3921312016426757"
      crossorigin="anonymous"></script>
     <!--
